# social-media-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: b254c2c5c5d0_initial_tables.py
app/: config.py  database.py  logging_conf.py  main.py  models.py  security.py
app/routes/: like.py  post.py  user.py
app/tests/: conftest.py  test_security.py
app/tests/routes/: test_like.py  test_post.py  test_user.py
social_media_api/: config.py  database.py  main.py  security.py  tasks.py
social_media_api/routers/: posts.py  users.py
social_media_api/tests/: conftest.py  test_security.py  test_tasks.py
social_media_api/tests/routers/: test_posts.py  test_users.py
