[project]
name = "social-media-api"
version = "0.1.0"
description = "A simple Social Media API built with FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.15.2",
    "asgi-correlation-id==4.3.4",
    "bcrypt==4.0.1",
    "databases[asyncpg]==0.9.0",
    "email-validator==2.2.0",
    "fastapi==0.115.12",
    "passlib[bcrypt]==1.7.4",
    "psycopg2==2.9.10",
    "pydantic-settings==2.8.1",
    "python-jose==3.4.0",
    "python-json-logger==3.3.0",
    "python-multipart==0.0.20",
    "rich==13.9.4",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "mypy==1.15.0",
    "pytest==8.3.5",
    "pytest-mock==3.14.0",
    "ruff==0.11.2",
    "types-passlib==1.7.7.20241221",
    "types-python-jose==3.4.0.20250224",
]
